# Business-Friction-AI-BFAI-

./: .gitignore  .pre-commit-config.yaml  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_report.md  hasil.json  pyproject.toml  report.md  requirements.txt  run_demo.ps1  run_full_demo.ps1  setup_and_run.ps1
.github/workflows/: ci.yml
bfai/: __main__.py
bfai/cli/: app.py  main.py
bfai/cli/commands/: analyze.py  explain.py  report.py
bfai/core/: exceptions.py  friction.py  reasoning.py
bfai/core/detectors/: __init__.py  base.py  human_dependency.py  loop.py  time_gap.py
bfai/docs/: friction_logic.md
bfai/examples/: sample_logs.csv
bfai/ingestion/: csv_loader.py  normalizer.py
bfai/llm/: factory.py  llm_interface.py  mock_provider.py
bfai/models/: anomaly.py  event.py  friction.py  trace.py
bfai/tests/: test_friction_detection.py  test_ingestion.py  test_reasoning.py
bfai/utils/: output.py
data/samples/: ecommerce_workflow.csv
docs/: demo_vs_production.md
scripts/: run_demo.ps1  verify_step2.py
