[tool.poetry]
name = "bfai"
version = "0.1.0"
description = "Business Friction AI - CLI Automation Engine"
authors = ["BFAI Team"]
readme = "README.md"
packages = [{include = "bfai"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.0"
rich = "^13.7.0"
click = "^8.1.0"
pandas = "^2.1.0"
pydantic = "^2.5.0"
numpy = "^1.26.0"

[tool.poetry.scripts]
bfai = "bfai.cli.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.8"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
